--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -11,9 +11,9 @@ description = "Description"
 
 ## Open Graph
 #images = ["doks.png"]
-#ogLocale = "en_US"
-#domainTLD = "doks.netlify.app"
-#titleHome = "Doks Theme"
+ogLocale = "en_US"
+domainTLD = "docs.green-coding.org"
+titleHome = "Green Metrics Tool Documentation"
 
 ## Twitter Cards
 #twitterSite = "@getdoks"
@@ -54,7 +54,7 @@ lqipWidth = "20x"
 smallLimit = "300"
 
 # Footer
-footer = "Powered by <a class=\"text-muted\" href=\"https://www.netlify.com/\">Netlify</a>, <a class=\"text-muted\" href=\"https://gohugo.io/\">Hugo</a>, and <a class=\"text-muted\" href=\"https://getdoks.org/\">Doks</a>"
+footer = "Powered by <a class=\"text-muted\" href=\"https://www.cloudlare.com/\">Cloudflare</a>, <a class=\"text-muted\" href=\"https://gohugo.io/\">Hugo</a>, and <a class=\"text-muted\" href=\"https://getdoks.org/\">Doks</a>"
 
 # Feed
 copyRight = "Copyright (c) Green Coding Berlin"
