--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -1,43 +1,7 @@
-[[docs]]
-  name = "Prologue"
-  weight = 10
-  identifier = "prologue"
-  url = "/docs/prologue/"
-
-[[docs]]
-  name = "Help"
-  weight = 60
-  identifier = "help"
-  url = "/docs/help/"
-
-# [[docs]]
-#   name = "Lorem"
-#   weight = 70
-#   identifier = "lorem"
-#   url = "/docs/lorem/"
-
-[[guide]]
-  name = "Lorem"
-  weight = 10
-  identifier = "lorem"
-  url = "/guide/lorem/"
-
-[[tutorial]]
-  name = "Lorem"
-  weight = 10
-  identifier = "lorem"
-  url = "/tutorial/lorem/"
-
 [[main]]
-  name = "Docs"
+  name = "Documentation"
   url = "/docs/prologue/introduction/"
-# url = "/docs/1.0/prologue/introduction/"
   weight = 10
-
-# [[main]]
-#   name = "Tutorial"
-#   url = "/tutorial/lorem/ipsum/"
-#   weight = 15
 
 
 [[main]]
@@ -53,6 +17,18 @@
   url = "/docs/prologue/quick-start/"
   parent = "get-started"
 
+[[main]]
+  name = "Help"
+  weight = 30
+  identifier = "help"
+  url = "/docs/help"
+
+[[main]]
+  name = "Contributing"
+  weight = 200
+  identifier = "contributing"
+  url = "/docs/contributing"
+
 
 [[social]]
   name = "GitHub"
@@ -61,13 +37,18 @@
   post = "v0.1.0"
   weight = 10
 
-[[social]]
-  name = "Twitter"
-  pre = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\" class=\"feather feather-twitter\"><path d=\"M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z\"></path></svg>"
-  url = "https://www.green-coding.org"
-  weight = 20
+#[[social]]
+#  name = "Twitter"
+#  pre = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\" class=\"feather feather-twitter\"><path d=\"M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z\"></path></svg>"
+#  url = "https://www.green-coding.org"
+#  weight = 20
 
 [[footer]]
-  name = "Privacy"
-  url = "/privacy-policy/"
+  name = "Imprint"
+  url = "https://www.green-coding.org/impressum"
+  weight = 10
+
+[[footer]]
+  name = "Privacy Policy"
+  url = "https://www.green-coding.org/datenschutz/"
   weight = 10
