CSS style for dark mode added to make codeblocks lighter; Structure finalized; Many new page additions

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,7 @@
 # Meta Data for SEO
 
 ## Homepage
-title = "Doks"
+title = "Green Metrics Tool"
 titleSeparator = "-"
 titleAddition = "Green Metrics Tool"
 description = "Description"
