--- a/usage_scenario.yml
+++ b/usage_scenario.yml
@@ -1,7 +1,8 @@
 ---
-name: Measure energy cost of HUGO build for documentation
+name: HUGO energy cost
 author: Arne Tarara
 version: 1
+description: Measure energy cost of HUGO build for documentation
 architecture: linux
 
 services:
