Migrated from .berlin to .io

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://docs.green-coding.berlin/"
+baseurl = "https://docs.green-coding.io/"
 canonifyURLs = false
 disableAliases = true
 disableHugoGeneratorInject = true
