--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -12,7 +12,7 @@ description = "Description"
 ## Open Graph
 #images = ["doks.png"]
 ogLocale = "en_US"
-domainTLD = "docs.green-coding.berlin"
+domainTLD = "docs.green-coding.io"
 titleHome = "Green Metrics Tool Documentation"
 
 ## Twitter Cards
