--- a/theme.toml
+++ b/theme.toml
@@ -4,11 +4,11 @@ licenselink = ""
 description = "Copyright"
 
 homepage = "https://github.com/green-coding-berlin/green-metrics-tool"
-demosite = "https://metrics.green-coding.berlin"
+demosite = "https://metrics.green-coding.io"
 
 tags = ["landing page", "documentation", "blog", "minimal", "modern", "customizable", "search", "dark mode", "bootstrap"]
 features = ["security aware", "fast by default", "seo-ready", "development tools", "bootstrap framework", "netlify-ready", "full text search", "page layouts", "dark mode"]
 
 [author]
   name = "Arne Tarara"
-  homepage = "https:/www.green-coding.berlin"
+  homepage = "https:/www.green-coding.io"
