--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "Doks child theme",
   "version": "0.4.3",
   "engines": {
-		"node": ">=16.15.0"
-	},
+    "node": ">=16.15.0"
+  },
   "browserslist": [
     "defaults"
   ],
@@ -38,32 +38,37 @@
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17",
-    "@babel/core": "^7.17",
-    "@babel/preset-env": "^7.17",
+    "@babel/cli": "^7.28",
+    "@babel/core": "^7.28",
+    "@babel/preset-env": "^7.28",
     "@fullhuman/postcss-purgecss": "^4.1",
-    "@hyas/doks": "^0.4",
-    "auto-changelog": "^2.4.0",
-    "autoprefixer": "^10.4",
+    "@thulite/doks-core": "^1.8.1",
+    "@thulite/inline-svg": "^1.2.0",
+    "@tabler/icons": "^3.34.0",
+    "auto-changelog": "^2.5.0",
+    "autoprefixer": "^10.4.21",
     "bootstrap": "^5.1",
     "clipboard": "^2.0",
-    "eslint": "^8.15",
+    "eslint": "^8.57",
     "exec-bin": "^1.0.0",
-    "hugo-installer": "^3.1",
-    "flexsearch": "^0.7.21",
-    "highlight.js": "^11.5",
-    "instant.page": "^5.1",
-    "katex": "^0.15",
+    "flexsearch": "^0.8.205",
+    "highlight.js": "^11.11",
+    "hugo-installer": "^4.0",
+    "instant.page": "^5.2",
+    "katex": "^0.16",
     "lazysizes": "^5.3",
     "markdownlint-cli2": "^0.4.0",
-    "postcss": "^8.4",
+    "postcss": "^8.5",
     "postcss-cli": "^9.1",
     "purgecss-whitelister": "^2.4",
-    "shx": "^0.3",
+    "shx": "^0.4",
     "stylelint": "^14.8",
     "stylelint-config-standard-scss": "^3.0"
   },
   "otherDependencies": {
-    "hugo": "0.99.0"
+    "hugo": "0.141.0"
+  },
+  "dependencies": {
+    "@thulite/inline-svg": "^1.2.0"
   }
 }
