--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -13,9 +13,11 @@ defaultMarkdownHandler = "goldmark"
     unsafe = true
 
 [highlight]
+  anchorLineNos = false
   codeFences = true
   guessSyntax = false
-  hl_Lines = ""
+  hl_Lines = ''
+  hl_inline = false
   lineNoStart = 1
   lineNos = false
   lineNumbersInTable = true
