--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,13 +1,10 @@
-# Meta Data for SEO
-
-## Homepage
+## Hugo
 title = "Green Metrics Tool"
 titleSeparator = "-"
 titleAddition = "Green Metrics Tool"
-description = "Description"
+description = "Documentation of the Green Metrics Tool"
 
-## Documentation
-# docsVersion = "0.3"
+mainSections = ["docs"]
 
 ## Open Graph
 #images = ["doks.png"]
@@ -39,41 +36,8 @@ titleHome = "Green Metrics Tool Documentation"
 #schemaGitHub = "https://github.com/h-enk/doks"
 #schemaSection = "blog"
 
-## Sitelinks Search Box
-siteLinksSearchBox = false
-
-## Chrome Browser
-themeColor = "#fff"
-
-# Images
-quality = 85
-bgColor = "#fff"
-landscapePhotoWidths = [900, 800, 700, 600, 500]
-portraitPhotoWidths = [800, 700, 600, 500]
-lqipWidth = "20x"
-smallLimit = "300"
-
 # Footer
 footer = "Powered by <a class=\"text-muted\" href=\"https://www.cloudlare.com/\">Cloudflare</a>, <a class=\"text-muted\" href=\"https://gohugo.io/\">Hugo</a>, and <a class=\"text-muted\" href=\"https://getdoks.org/\">Doks</a>"
-
-# Feed
-copyRight = "Copyright (c) Green Coding Solutions"
-
-# Alert
-alert = false
-alertDismissable = true
-
-# Edit Page
-# repoHost [Github | Gitea | GitLab | Bitbucket | BitbucketServer ] is used for building the edit link based on git hoster
-repoHost = "GitHub"
-#repoHost = "Gitea"
-docsRepo = "https://github.com/green-coding-solutions/documentation"
-docsRepoBranch = "main"
-docsRepoSubPath = ""
-editPage = false
-lastMod = false
-
-mainSections = ["docs"]
 
 # Doks configuration for thulite/doks v1
 [doks]
@@ -93,10 +57,14 @@ mainSections = ["docs"]
   indexSummary = false
 
   # Search results
-  showDate = false # false (default) or true
-  showSummary = true # true (default) or false
-  searchLimit = 10 # 0 (no limit, default) or natural number
+  showDate = false
+  showSummary = true
+  searchLimit = 10 # 0 (no limit, default)
   
+  # Global alert
+  alert = false
+  alertDismissable = true
+
   # Bootstrap
   bootstrapJavascript = true # false (default)
   
@@ -107,16 +75,19 @@ mainSections = ["docs"]
   headlineHash = true
   scrollSpy = true
 
-  # Alerts
-  alert = false
+  # Multilingual
+  multilingualMode = false
 
   # Versioning
   docsVersioning = false
 
-  # [doks.menu]
-  #   [doks.menu.section]
-  #     auto = true
-  #     collapsibleSidebar = true
+  # Repository
+  editPage = false
+  lastMod = false
+  repoHost = "GitHub"
+  docsRepo = "https://github.com/h-enk/doks"
+  docsRepoBranch = "main"
+  docsRepoSubPath = ""
   
 # Debug
 [render_hooks.link]
