Fix docs repo url

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -85,6 +85,6 @@ footer = "Powered by <a class=\"text-muted\" href=\"https://www.cloudlare.com/\"
   editPage = false
   lastMod = false
   repoHost = "GitHub"
-  docsRepo = "https://github.com/h-enk/doks"
+  docsRepo = "https://github.com/green-coding-solutions/documentation/"
   docsRepoBranch = "main"
   docsRepoSubPath = ""
