Added manual fixing option for Markdown

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint:scripts": "eslint assets/js config functions",
     "lint:styles": "stylelint \"assets/scss/**/*.{css,sass,scss,sss,less}\"",
     "lint:markdown": "markdownlint-cli2 \"*.md\" \"content/**/*.md\"",
+    "lint:markdown:staged": "shx echo $(git diff --diff-filter=d --cached --name-only | grep -E '\\.md$') | xargs markdownlint-cli2",
     "lint:markdown-fix": "markdownlint-cli2 --fix \"*.md\" \"content/**/*.md\"",
     "lint:markdown-fix:staged": "shx echo $(git diff --diff-filter=d --cached --name-only | grep -E '\\.md$') | xargs markdownlint-cli2 --fix",
     "server": "exec-bin node_modules/.bin/hugo/hugo server",
